--- a/驱动工具/驱动工具.vcxproj.filters
+++ b/驱动工具/驱动工具.vcxproj.filters
@@ -42,6 +42,9 @@
     <ClInclude Include="IoctlEdtControl.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="KbdIoctlCode.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
