添加KS* 控制码
添加KS* 控制码

--- a/驱动工具/驱动工具.vcxproj
+++ b/驱动工具/驱动工具.vcxproj
@@ -175,6 +175,7 @@
     <ClInclude Include="HidDevice.h" />
     <ClInclude Include="IoctlEdtControl.h" />
     <ClInclude Include="KbdIoctlCode.h" />
+    <ClInclude Include="ksDevice.h" />
     <ClInclude Include="MyApp.h" />
     <ClInclude Include="PrintDevice.h" />
     <ClInclude Include="resource.h" />
