--- a/驱动工具/驱动工具.vcxproj.filters
+++ b/驱动工具/驱动工具.vcxproj.filters
@@ -57,6 +57,9 @@
     <ClInclude Include="ddpar.h">
       <Filter>头文件\DeviceIoctlCode</Filter>
     </ClInclude>
+    <ClInclude Include="ksDevice.h">
+      <Filter>头文件\DeviceIoctlCode</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
