--- a/驱动工具/驱动工具.vcxproj.filters
+++ b/驱动工具/驱动工具.vcxproj.filters
@@ -60,6 +60,9 @@
     <ClInclude Include="ksDevice.h">
       <Filter>头文件\DeviceIoctlCode</Filter>
     </ClInclude>
+    <ClInclude Include="ConfigManager.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -78,6 +81,9 @@
       <Filter>源文件</Filter>
     </ClCompile>
     <ClCompile Include="IoctlEdtControl.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="ConfigManager.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
